fixed div visibility

--- a/Fall2024-Assignment2-cchall5/wwwroot/css/site.css
+++ b/Fall2024-Assignment2-cchall5/wwwroot/css/site.css
@@ -73,3 +73,11 @@ h1 {
     width: 100%;
     margin-top: 0;
 }
+
+#searchResults {
+    visibility: hidden;
+}
+
+#time {
+    visibility: hidden;
+}
